# camp

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .oxlintrc.json  .oxlintrc.jsonc  .yarnrc.yml  Cargo.toml  commitlint.config.cjs  commitlint.config.js  commitlint.config.ts  conftest.py  eslint.config.js  eslint.config.ts  jupytext.toml  lint-staged.config.cjs  lint-staged.config.js  lint-staged.config.ts  marimo.css  mise.toml  package.json  pnpm-workspace.yaml  prettier.config.cjs  prettier.config.js  prettier.config.ts  pyproject.toml  ruff.toml  rustfmt.toml  stylelint.config.cjs  stylelint.config.js  stylelint.config.ts  vite.config.ts
.github/workflows/: build-spirv-cross.yml  check-commit-msg.yml  check-cpp.yml  check-java.yml  check-js.yml  check-kt.yml  check-misc.yml  check-py.yml  check-rs.yml  ci.yml  publish-chromatic.yml  publish-npm.yml  publish-vercel.yml  publish.yml  verify-commit-msg.yml  verify-cpp.yml  verify-java.yml  verify-js.yml  verify-kt.yml  verify-py.yml  verify-rs.yml
camp/datasets/: ikcest.py  mnist.py  soccernet.py  utils.py  vitrox.py
camp/models/yolo/: yolo_utils.py
camp/utils/: jupyter_utils.py  torch_utils.py
data_analysis/: ab_testing.py  hypothesis_testing.py  pyspark_basics.py
deep_learning/: activation_functions.py  multi_task.py  rnn_ks.py  xor_tf.py
examples/android/samples/: build.gradle.kts  gradle.properties  settings.gradle.kts
examples/cuda/basics/: CMakeLists.txt  pixi.toml
examples/cuda/basics/src/: hello.cu  hello.h  main.cpp  tensor.cu  tensor.h
examples/elasticsearch/search-ui/: .env.example  Dockerfile  index.html  package.json  tsconfig.json
examples/flutter/counter/: pubspec.yaml
examples/grafana/smartctl/: apply.py  package.json  pyproject.toml  smartctl.py
examples/hatchet/typescript-connectors/: .env.example  Dockerfile  elasticsearch.ts  hatchet-client.ts  package.json  worker.ts
examples/hatchet/typescript-simple/: .env.example  package.json  run.ts  worker.ts  workflow.ts
examples/http/: README.md
examples/http/_bench/: benchmark.py  k-six.ts  package.json  report.py  utils.py
examples/http/axum/: Cargo.toml
examples/http/axum-connect/: Cargo.toml  build.rs
examples/http/express/: package.json  server.ts
examples/http/fastapi/: pyproject.toml  server.py
examples/http/fastify/: package.json  server.ts
examples/http/h-three/: package.json  server.ts
examples/http/node/: package.json  server.ts
examples/http/orpc/: fastify.ts  h-three.ts  node.ts  openapi-node.ts  package.json  tsconfig.json
examples/http/spring-boot/: build.gradle.kts
examples/http/trpc/: fastify.ts  node.ts  package.json
examples/javafx/lab-booking/: README.md  build.gradle.kts
examples/javafx/malloc-simulator/: README.md  build.gradle.kts  mise.toml
examples/javafx/todo-event-bus/: README.md  build.gradle.kts
examples/javafx/todo-mvc/: README.md  build.gradle.kts
examples/javafx/todo-mvvm/: README.md
examples/node/basic/: fs.ts  package.json
examples/node/basics/: fs.ts  package.json  tsconfig.json
examples/ratatui/counter/: Cargo.toml
examples/ratatui/counter-elm/: Cargo.toml
examples/ratatui/json-editor/: Cargo.toml
examples/react-native/twitter/: app.json  babel.config.js  index.ts  metro.config.js  mise.toml  package.json  tailwind.config.js
examples/react-server/: README.md
examples/react-server/next/: package.json  tsconfig.json
examples/react-server/tanstack-start/: home.tsx  package.json  vite.config.ts
examples/react-server/vite/: index.html  package.json  server-stream.ts  server.ts  tsconfig.json  vite.config.ts
examples/react/server-rendering/: README.md  package.json
examples/tanstack/start-solid/: babel.config.js  mise.toml  package.json  postcss.config.js  tsconfig.json  vite.config.ts
examples/tanstack/start-trpc/: package.json  (+3 more)
examples/xeus/cling/: .clang-format  .clangd  CMakeLists.txt  pixi.toml
examples/xeus/cling/kernels/xcling/: kernel.json
examples/xeus/cling/src/: main.cpp  xbuffer.hpp  xinput.hpp  xinterpreter.cpp  xinterpreter.hpp
machine_learning/: decision_tree.py  ndcg.py  nmf.py  pca.py  random_forest.py  regression.py
notebooks/cxx/: .clang-format  basics.cpp  cling_basics.cpp  graph.cpp  sequence.cpp
notebooks/data_analysis/: ab_testing.py  hypothesis_testing.py  pandas_internals.py  pyspark_basics.py  sampling_distributions.py
notebooks/deep_learning/: activation_functions.py  momentum.py  multi_task.py  xor_ks.py  xor_tf.py
notebooks/java/: Basics.java
notebooks/machine_learning/: decision_tree.py  ndcg.py  nmf.py  random_forest.py  regression.py  svd.py
notebooks/random/: area_of_polygon.py  christmas_tree.py  cling.py  color_models.py  graph.py  keras_utils.py  product_mix.py  simple_benchmarks.py
notebooks/reinforcement_learning/: frozen_lake.py  lunar_lander.py  taxi.py
notebooks/rust/: 000_concepts.rs  010_ownership.rs
notebooks/text/: eliza.py  feature_extraction.py  ngram_language_models.py  sentiment_analysis.py  word_embeddings.py
notebooks/vision/: fashion_mnist.py  fashion_mnist_ks.py  fashion_mnist_tf.py  faster_rcnn.py  faster_rcnn_profile.py
patches/: vite-plugin-solid@2.11.11.patch
random/: christmas_tree.py  color_models.py  distance_metrics.py  graph.py  keras_utils.py  marimo.css  simple_benchmarks.py  soccer_pitch.py
reinforcement_learning/: frozen_lake.py  lunar_lander.py
solutions/sports/: yolo_v8.py  yolo_v8_calibration.py  yolo_v8_calibration_pipeline.py  yolo_v8_pipeline.py  yolo_v8_track.py  yolo_v8_track_val.py  yolo_v8_val.py
src/: doctor.rs  git.rs  graph.rs  lib.rs  main.rs  monitor.rs  setup.rs
stories/: mise.toml  package.json  tsconfig.json  vercel.json  vite.config.ts  vitest.config.ts
stories/.storybook/: global.css  main.ts  preview.ts  vitest.setup.ts
stories/src/: GradientBorderCard.stories.tsx  Sidebar.stories.tsx  gradient-border-card.stories.tsx  sidebar.stories.tsx
text/: eliza.py  feature_extraction.py  ngram_language_models.py  sentiment_analysis.py  word_embeddings.py
vision/: fashion_mnist_ks.py  fashion_mnist_tf.py  faster_rcnn.py
(+197 files in other folders)
