[package]
name = "camp"
edition = "2021"
default-run = "camp"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "camp"
path = "src/main.rs"

[[bin]]
name = "camp-nw"
path = "src/main.rs"
required-features = ["windows_subsystem"]

[features]
windows_subsystem = []

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
indexmap = "2.8.0"
owo-colors = "4.2.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
regex = "1.11.0"
which = "6.0.3"
windows-registry = "0.3.0"

[dependencies.windows]
version = "0.57"
features = ["Win32_Foundation", "Win32_System_Console", "Win32_UI_WindowsAndMessaging"]

[workspace]
members = ["examples/ratatui/counter", "examples/ratatui/json-editor"]
