[package]
name = "camp"
edition = "2021"
default-run = "camp"

[workspace]
members = [
  "examples/ratatui/counter",
  "examples/ratatui/counter-elm",
  "examples/ratatui/json-editor"
]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "camp"
path = "src/main.rs"

[[bin]]
name = "camp-nw"
path = "src/main.rs"
required-features = ["windows_subsystem"]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
git2 = "0.20.2"
indexmap = "2.8.0"
inquire = "0.9.1"
owo-colors = "4.2.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
regex = "1.11.0"
which = "8.0.0"
windows-registry = "0.5.2"

[target.'cfg(windows)'.dependencies.windows]
version = "0.61.3"
features = [
  "Win32_Foundation",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging"
]

[features]
windows_subsystem = []
