[package]
name = "camp"
edition = "2021"
default-run = "camp"

[workspace]
members = [
  "examples/http/axum",
  "examples/http/axum-connect",
  "examples/ratatui/counter",
  "examples/ratatui/counter-elm",
  "examples/ratatui/json-editor"
]

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "camp"
path = "src/main.rs"

[[bin]]
name = "camp-nw"
path = "src/main.rs"
required-features = ["windows_subsystem"]

[dependencies]
clap = { version = "4.5.40", features = ["derive", "wrap_help"] }
git2 = "0.20.2"
indexmap = "2.8.0"
inquire = "0.9.1"
owo-colors = "4.2.0"
pyo3 = { version = "0.21.2", features = ["extension-module"] }
regex = "1.11.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.47.2", features = ["full"] }
which = "8.0.0"
windows-registry = "0.6.1"
windows-service = "0.8.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.62.2"
features = [
  "Win32_Devices_Display",
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Console",
  "Win32_System_Environment",
  "Win32_System_Ole",
  "Win32_System_ProcessStatus",
  "Win32_System_RemoteDesktop",
  "Win32_System_Rpc",
  "Win32_System_Services",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_System_Wmi",
  "Win32_UI_Accessibility",
  "Win32_UI_WindowsAndMessaging"
]

[features]
windows_subsystem = []
