[project]
name = "camp"
version = "2024.0.0"
requires-python = ">= 3.11"
dependencies = [
    "altair[all]==5.5.0",
    "fsspec>=2024.6.1",
    "keras>=3.7.0",
    "manim==0.19.0",
    "matplotlib==3.10.3",
    "minio==7.2.15",
    "numpy==2.3.0",
    "pandas==2.3.0",
    "polars==1.31.0",
    "psutil>=6.0.0",
    "pyarrow>=17.0.0",
    "rich[jupyter]>=13.9.2",
    "s3fs>=2024.6.1",
    "scikit-learn>=1.5.1",
    "scipy==1.15.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1",
    "sympy>=1.13.3",
]

[project.optional-dependencies]
distributed = [
    "pyspark==4.0.0",
]
gym = [
    "gymnasium[atari,box2d,classic-control,mujoco,toy-text]==1.1.1",
]
torch = [
    "deepspeed @ https://github.com/yjoer/camp/releases/download/v2025.6.0/deepspeed-0.15.0+55b4cae8-py3-none-any.whl",
    "safetensors>=0.4.3",
    "torch==2.4.1+cu124",
    "torchmetrics>=1.4.1",
]
tree = [
    "catboost>=1.2.5",
    "lightgbm>=4.4.0",
    "xgboost>=2.1.0",
]
vision = [
    "mmcv>=2.2.0",
    "mmdet>=3.3.0",
    "mmengine>=0.10.4",
    "motmetrics @ git+https://github.com/cheind/py-motmetrics@057504b",
    "pillow>=10.4.0",
    "supervision>=0.22.0",
    "timm>=1.0.7",
    "torchvision==0.19.1+cu124",
    "ultralytics>=8.2.85",
]
text = [
    "gensim>=4.3.3",
    "nltk==3.9.1",
    "spacy==3.8.7",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.jupytext]
preferred_jupytext_formats_read = "cpp:percent,py:percent,rs:percent"
notebook_metadata_filter = "-all"

[tool.marimo.display]
custom_css = ["random/marimo.css"]
code_editor_font_size = 16

[tool.marimo.runtime]
pythonpath = ["."]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "camp.rs"

[tool.mypy]
cache_dir = ".venv/.mypy_cache"
explicit_package_bases = true
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest.ini_options]
addopts = "-n auto"
cache_dir = ".venv/.pytest_cache"
python_files = "*.py"
testpaths = ["camp", "solutions"]

[tool.ruff]
cache-dir = ".venv/.ruff_cache"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
ignore = ["E731", "E741"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.uv]
managed = true
build-constraint-dependencies = ["setuptools==77.0.3"]
dev-dependencies = [
    "black==25.1.0",
    "isort==6.0.1",
    "jedi-language-server==0.45.1",
    "jupyter-collaboration==4.1.0",
    "jupyterlab-code-formatter==3.0.2",
    "jupyterlab-git==0.51.2",
    "jupyterlab-lsp==5.2.0",
    "jupyterlab-quickopen @ https://github.com/yjoer/camp/releases/download/v2025.6.0/jupyterlab_quickopen-2.0.1-py3-none-any.whl",
    "jupyterlab==4.4.5",
    "jupytext==1.17.2",
    "marimo==0.14.12",
    "maturin==1.8.7",
    "mypy==1.17.0",
    "notebook-intelligence==2.2.6",
    "pip>=24.2",
    "pytest-xdist==3.8.0",
    "pytest==8.4.1",
    "ruff==0.12.4",
    "scalene==1.5.51",
]

[tool.uv.workspace]
members = ["examples/grafana/*"]

[[tool.uv.dependency-metadata]]
name = "gensim"
version = "4.3.3"
requires-dist = ["scipy>=1.14.0", "smart-open>=1.8.1"]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
