[project]
name = "camp"
version = "2024.0.0"
requires-python = ">= 3.11"
dependencies = [
  "altair[all]==6.0.0",
  "fsspec==2025.12.0",
  "keras==3.13.0",
  "manim==0.19.1",
  "matplotlib==3.10.8",
  "minio==7.2.20",
  "numpy==2.4.0",
  "pandas==2.3.3",
  "polars==1.36.1",
  "psutil==7.1.3",
  "pyarrow==22.0.0",
  "rich[jupyter]==14.2.0",
  "s3fs==2025.12.0",
  "scikit-learn==1.8.0",
  "scipy==1.16.3",
  "seaborn==0.13.2",
  "statsmodels==0.14.6",
  "streamlit==1.52.2",
  "sympy==1.14.0",
]

[project.optional-dependencies]
distributed = [
  "pyspark==4.0.0",
]
gym = [
  "gymnasium[atari,box2d,classic-control,mujoco,toy-text]==1.2.3",
]
tensorflow = [
  "tensorflow==2.20.0",
]
text = [
  "en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "gensim @ git+https://github.com/piskvorky/gensim@8f81545",
  "nltk==3.9.2",
  "spacy==3.8.11",
]
torch = [
  "torch==2.8.0",
  "torchvision==0.23.0",
]
torch-common = [
  "deepspeed @ https://github.com/yjoer/camp/releases/download/v2025.6.0/deepspeed-0.15.0+55b4cae8-py3-none-any.whl",
  "safetensors==0.6.2",
  "torchmetrics==1.8.2",
]
torch-cu129 = [
  "torch==2.8.0",
  "torchvision==0.23.0",
]
tree = [
  "catboost==1.2.8",
  "lightgbm==4.6.0",
  "xgboost==3.1.2",
]
vision = [
  "mmcv>=2.2.0",
  "mmdet>=3.3.0",
  "mmengine>=0.10.4",
  "motmetrics @ git+https://github.com/cheind/py-motmetrics@057504b",
  "pillow==12.0.0",
  "supervision>=0.22.0",
  "timm==1.0.22",
  "ultralytics==8.3.189",
]

[dependency-groups]
dev = [
  "jedi-language-server==0.46.0",
  "jjava==1.0a6",
  "jupyter-collaboration==4.2.0",
  "jupyter-ruff @ git+https://github.com/leotaku/jupyter-ruff@991d3a5",
  "jupyterlab==4.5.1",
  "jupyterlab-git==0.51.3",
  "jupyterlab-lsp==5.2.0",
  "jupyterlab-quickopen @ https://github.com/yjoer/camp/releases/download/v2025.6.0/jupyterlab_quickopen-2.0.1-py3-none-any.whl",
  "jupytext==1.18.1",
  "marimo==0.18.4",
  "maturin==1.10.2",
  "mypy==1.19.1",
  "notebook-intelligence==3.1.0",
  "pytest==9.0.2",
  "pytest-xdist==3.8.0",
  "ruff==0.14.10",
  "scalene==1.5.55",
]

[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"

[tool.jupytext]
preferred_jupytext_formats_read = "cpp:percent,java:percent,py:percent,rs:percent"
notebook_metadata_filter = "-all"

[tool.marimo.display]
custom_css = ["marimo.css"]
code_editor_font_size = 16

[tool.marimo.runtime]
pythonpath = ["."]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "camp.rs"

[tool.mypy]
cache_dir = ".venv/.mypy_cache"
explicit_package_bases = true
ignore_missing_imports = true
allow_redefinition = true

[tool.pytest]
addopts = ["-n", "auto"]
cache_dir = ".venv/.pytest_cache"
python_files = ["*.py"]
testpaths = ["camp", "solutions"]

[tool.ruff]
cache-dir = ".venv/.ruff_cache"
extend = "packages/config/ruff.toml"

[tool.ruff.lint.per-file-ignores]
"notebooks/**.py" = [
  "B015",  # useless-comparison
  "B018",  # useless-expression
]
"solutions/**.py" = [
  "B018",  # useless-expression
]

[tool.uv]
managed = true
build-constraint-dependencies = ["setuptools==77.0.3"]
conflicts = [
  [
    { extra = "torch" },
    { extra = "torch-cu129" },
  ],
]

[tool.uv.workspace]
members = ["examples/grafana/*"]

[[tool.uv.dependency-metadata]]
name = "gensim"
version = "4.3.3"
requires-dist = ["scipy>=1.14.0", "smart-open>=1.8.1"]

[tool.uv.sources]
torch = [
  { index = "pytorch", extra = "torch" },
  { index = "pytorch-cu129", extra = "torch-cu129" },
]
torchvision = [
  { index = "pytorch", extra = "torch" },
  { index = "pytorch-cu129", extra = "torch-cu129" },
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
